--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.6",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-mdx-remote": "^4.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-syntax-highlighter": "^15.5.0",
